--- a/Echidna/package.json
+++ b/Echidna/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3",
+    "erc-payable-token": "^4.9.4",
     "hardhat": "^2.17.2"
   },
   "devDependencies": {
